# fastapi-job-candidate

./: .gitignore  Dockerfile  README.md  activate.sh  docker-compose.yml  pyproject.toml
candidate_db/: database.py  main.py
db/: sql_app.db
public/: index.html
public/assets/css/: style.css
public/assets/js/: script.js
