[tool.poetry]
name = "candidate-db"
version = "0.1.0"
description = ""
authors = ["Valeria Fadeeva <valeria.fadeeva.me@gmail.com>"]
license = "AGPL3"
readme = "README.md"
#packages = [{include = "candidate_db"}]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.10"
fastapi = "^0.95.1"
hypercorn = "^0.14.3"
#daphne = "^4.0.0"

[tool.poetry.group.dev.dependencies]
#pytest = "^7.3.1"
#autopep8 = "^2.0.2"
#yapf = "^0.33.0"
#black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
